--- a/templates/email/change_status.html.twig
+++ b/templates/email/change_status.html.twig
@@ -63,9 +63,9 @@
                                             </tr>
                                             <tr>
                                                 <td style="-webkit-text-size-adjust:none;font-size: 12px; color: #5b5b5b; font-family: 'Open Sans', sans-serif; line-height: 18px; vertical-align: top; text-align: left;">
-                                                    VTT <br>
-                                                    CT<br>
-                                                    012345667
+                                                    {{ order.getRecipientName() }} <br>
+                                                    {{ order.getAddressDelivery() }}<br>
+                                                    {{ order.getRecipientPhone() }}
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -91,9 +91,9 @@
                                             <tr>
                                                 <td style="-webkit-text-size-adjust:none;font-size: 12px; color: #5b5b5b; font-family: 'Open Sans', sans-serif; line-height: 18px; vertical-align: top; text-align: right;">
                                                     <p style="-webkit-text-size-adjust:none;padding:0 !important;margin-top:0 !important;margin-right:0 !important;margin-bottom:0 !important;margin-left:0 !important;">ORDER</p>
-                                                    #1<br/>
+                                                    #{{ order.getId() }}<br/>
 
-                                                    <p style="-webkit-text-size-adjust:none;padding:0 !important;margin-top:0 !important;margin-right:0 !important;margin-bottom:0 !important;margin-left:0 !important;">11/04/2022</p>
+                                                    <p style="-webkit-text-size-adjust:none;padding:0 !important;margin-top:0 !important;margin-right:0 !important;margin-bottom:0 !important;margin-left:0 !important;">{{ order.getUpdateAt()|date('d/m/Y') }}</p>
                                                 </td>
                                             </tr>
                                             </tbody>
